[project]
name = "splunkwasm"
version = "0.1.0"
description = "Testing Splunk's Python for WASM compatibility"
readme = "README.md"
requires-python = "==3.13.4"
dependencies = ["pywasm==2.2.2"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pip>=26.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["splunkwasm"]
include = ["splunkwasm/splunkwasm.wasm"]

[tool.hatch.build.targets.sdist]
include = ["splunkwasm/splunkwasm.wasm"]
